--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   </head>
   <body>
     <div class="heading">
-      <div id="logoback"></div>
       <img src="images/icon transparent.png" id="logo" />
       <div id="heading-menu">
         <h1 id="EVOL-title">EVOL</h1>
@@ -16,18 +15,19 @@
           <button id="first-heading-button" class="heading-button">
             ITEM 1
           </button>
-          <button class="heading-button">ITEEEM 2</button>
+          <button class="heading-button">ITEEEEEEM 2</button>
           <button class="heading-button">ITEM 3</button>
           <button class="heading-button">ITEM 4</button>
         </div>
       </div>
     </div>
-    <div class="heading" id="backhead">
-      <h1>-</h1>
+    <div id="backhead"></div>
     </div>
     <div class="box">
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam qui
-      praesentium sit maiores distinctio.
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae excepturi
+      recusandae dignissimos labore molestiae mollitia iure dicta eaque ipsum?
+      Officiis dolore mollitia, sed molestiae inventore beatae ipsum enim
+      explicabo vel!
     </div>
     <h2 class="title">Bongus</h2>
     <h2>Bongus</h2>
