--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>EVOL</title>
+    <link rel="shortcut icon" href="images/icon transparent.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -23,30 +24,29 @@
     </div>
     <div id="backhead"></div>
     </div>
-    <div class="box">
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae excepturi
-      recusandae dignissimos labore molestiae mollitia iure dicta eaque ipsum?
-      Officiis dolore mollitia, sed molestiae inventore beatae ipsum enim
-      explicabo vel!
-    </div>
-    <h2 class="title">Bongus</h2>
-    <h2>Bongus</h2>
-    <h2>Bongus</h2>
-    <h2>Bongus</h2>
-    <h2>Bongus</h2>
-    <h2>Bongus</h2>
-    <h2>Bongus</h2>
-    <h2>Bongus</h2>
-    <h2>Bongus</h2>
-    <h2>Bongus</h2>
-    <h2>Bongus</h2>
-    <h2>Bongus</h2>
-    <h2>Bongus</h2>
-    <h2>Bongus</h2>
-    <h2>Bongus</h2>
-    <h2>Bongus</h2>
-    <h2>Bongus</h2>
-    <h2>Bongus</h2>
-    <h2>Bongus</h2>
+<div id="main-page-body">
+<div id="updates">
+  <h2>UPDATES</h2>
+</div>
+<div id="separator">
+  <img id="main-separator" src="images/separator.png">
+</div>
+<div id="games">
+  <img class="protag" src="images/game2.png">
+  <div id="game-summary">
+    <h2>GAME NAME</h2>
+    <p>Game Description Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+      Sit, ipsum nam nulla, <br> id obcaecati cupiditate quos iure harum,
+      distinctio numquam ipsa ratione corrupti quae totam <br> praesentium.
+      Dolorum voluptate nemo vel!</p>
+<div id="game-low-half">
+  <img class="screenshot" src="images/screenshot1.jpg">
+  <div id="game-links">
+    <a href="https://store.steampowered.com/app/1274600/The_Last_Faith/" target="_blank" ><img src="images/steam.png" class="game-button" id="steam-button"></a>
+  </div>
+</div>
+  </div>
+</div>
+</div>
   </body>
 </html>
