--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             GAMES
           </button>
           <button class="heading-button">ABOUT</button>
-          <button class="heading-button">MERCH</button>
+          <button class="heading-button" id="merchbutton"><img id="merchshirt" src="images/shirt.png">MERCH<img id="merchplush" src="images/plush1.png"></button>
           <button class="heading-button">TEAM</button>
           <a href="https://discord.gg/cXcyDHh6Pr" target="_blank"
             ><img class="social-icon" src="images/discord.png"
@@ -238,7 +238,7 @@
       <div id="separator">
         <img id="main-separator" src="images/separator.png" />
       </div>
-      <div id="games">
+      <div id="games"> 
         <img class="protag" src="images/game1.png" />
         <div class="section" id="game-summary">
           <div class="game-description">
